# Selly

./: .gitignore  FIXES-SUMMARY.md  INTEGRATION.md  Spec.md  TESTING-TRANSCRIPTION.md  dev-all.js  package-lock.json  package.json  test-transcription.js
.claude/: settings.local.json
apps/agent/: README.md  package-lock.json  package.json
apps/agent/native/win-audio-capture/: Cargo.toml
apps/agent/native/win-audio-capture/src/: wasapi_loopback.rs
apps/agent/src/: index.ts  server.ts
apps/agent/src/audio/: AudioCapture.ts  AudioDeviceManager.ts  capture.ts  index.ts  streamCapture.ts
apps/agent/src/intent/: IntentTypes.ts  QuestionDetector.ts
apps/agent/src/session/: AudioSessionController.ts
apps/agent/src/sse/: index.ts
apps/agent/src/transcription/: CloudTranscriber.ts  LiveTranscriber.ts  TranscriptionTypes.ts  deepgramStream.ts  index.ts
apps/agent/src/utils/: errors.ts
apps/backend/: .gitignore  package-lock.json  package.json
apps/backend/src/: index.ts
apps/backend/src/api/: e2e-smoke-tests.ts  index.ts  routes.ts  store.ts
apps/backend/src/jobs/: worker.ts
apps/backend/src/services/: deepgram.ts  index.ts  liveRecommendations.ts  pipeline.ts
apps/backend/src/signals/: constants.ts  extractor.ts
apps/desktop/: index.html  overlay_errors.txt  overlay_errors_v2.txt  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.css  main.ts
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src/components/: ErrorAlert.tsx  (+5 more)
supabase/: jobs_schema.sql  schema.sql
(+37 files in other folders)
