[package]
name = "win-audio-capture"
version = "0.1.0"
edition = "2021"
description = "Windows audio capture sidecar for Selly agent - captures MIC + WASAPI loopback to stereo WAV"

[[bin]]
name = "win-audio-capture"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
hound = "3.5"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
anyhow = "1.0"
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
]}

[profile.release]
opt-level = 3
lto = true
strip = true
